--- a/package.json
+++ b/package.json
@@ -11,11 +11,14 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1",
+    "lodash": "^4.17.20",
     "morgan": "^1.10.0",
     "nodemon": "^1.19.4",
     "nunjucks": "^3.2.2"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "jshint": "^2.12.0"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Plataforma5/06-Tweety-Structure.git"
