--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "lodash": "^4.17.20",
     "morgan": "^1.10.0",
     "nodemon": "^1.19.4",
-    "nunjucks": "^3.2.2"
+    "nunjucks": "^3.2.2",
+    "socket.io": "^3.1.0"
   },
   "devDependencies": {
     "jshint": "^2.12.0"
